chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome-node
spec:
  replicas: 1
  selector:
    matchLabels:
      component: chrome-node
  template:
    metadata:
      labels:
        component: chrome-node
    spec:
      containers:
      - name: chrome-node
        image: selenium/node-chrome:3.4.0
        resources:
          limits:
            memory: "1536Mi"
            cpu: "500m"
        ports:
        - containerPort: 5900
        volumeMounts:
          - mountPath: "/dev/shm"
            name: "dshm"
      volumes:
        - name: "dshm"
          emptyDir:
            medium: "Memory"
