firefox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox-node
spec:
  replicas: 1
  selector:
    matchLabels:
      component: firefox-node
  template:
    metadata:
      labels:
        component: firefox-node
    spec:
      containers:
      - name: firefox-node
        image: selenium/node-firefox-debug:3.141
        resources:
          limits:
            memory: "1536Mi"
            cpu: "10m"
        ports:
        - containerPort: 5900
