selenium-hub-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub-service
spec:
  type: ClusterIP
  selector:
    component: selenium-hub
  ports:
    - port: 4444
      targetPort: 4444
